# django-side-effects

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  runtests.py  settings.py  setup.py  tox.ini
.github/workflows/: tox.yml
side_effects/: __init__.py  apps.py  checks.py  decorators.py  registry.py  settings.py  signals.py  tests.py
side_effects/management/commands/: display_side_effects.py
test_app/: __init__.py  apps.py
tests/: __init__.py  settings.py  test_checks.py  test_decorators.py  test_display_side_effects.py  test_registry.py  test_run_side_effects.py  test_transactions.py  test_version.py  tests.py
tests/fixtures/: checks_fixtures.py
