[tool.poetry]
name = "django-side-effects"
version = "3.2.0"
description = "Django app for managing external side effects."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-side-effects"
repository = "https://github.com/yunojuno/django-side-effects"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{ include = "side_effects" }]

[tool.poetry.dependencies]
python = "^3.12"
django = ">=5.2,<7.0"

[tool.poetry.group.dev.dependencies]
coverage = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
